# aoc2024

./: .clang-format  .gitignore  CMakeLists.txt  CMakeUserPresets.json  conandata.yml
day1/: CMakeLists.txt  readme.md
day1/src/: input.h  main.cpp
day10/: CMakeLists.txt  readme.md
day10/src/: input.h  main.cpp
day11/: CMakeLists.txt  readme.md
day11/src/: main.cpp
day12/: CMakeLists.txt  readme.md
day12/src/: input.h  main.cpp  main2.cpp
day13/: CMakeLists.txt  readme.md
day13/src/: input.h  main.cpp
day14/: CMakeLists.txt  readme.md
day14/src/: input.h  main.cpp
day15/: CMakeLists.txt  readme.md
day15/src/: input.h  main.cpp
day16/: CMakeLists.txt  readme.md
day16/src/: input.h  main.cpp
day17/: CMakeLists.txt  readme.md
day17/src/: main.cpp
day18/: CMakeLists.txt  readme.md
day18/src/: input.h  main.cpp
day19/: CMakeLists.txt  readme.md
day19/src/: input.h  main.cpp
day2/: CMakeLists.txt  readme.md
day2/src/: main.cpp
day20/: CMakeLists.txt
day20/src/: input.h  main.cpp
day21/: CMakeLists.txt  readme.md
day21/src/: main.cpp
day22/: CMakeLists.txt  readme.md
day22/src/: main.cpp
day23/: CMakeLists.txt  readme.md
day23/src/: main.cpp
day24/: CMakeLists.txt  readme.md
day24/src/: main.cpp
day25/: CMakeLists.txt  readme.md
day25/src/: main.cpp
day3/: CMakeLists.txt  readme.md
day3/src/: input.h  main.cpp
day4/: CMakeLists.txt  readme.md
day4/src/: input.h  main.cpp
day5/: CMakeLists.txt  readme.md
day5/src/: inputs.h  main.cpp
day6/: CMakeLists.txt  readme.md
day6/src/: inputs.h  main.cpp  main2.cpp
day7/: CMakeLists.txt  readme.md
day7/src/: input.h  main.cpp
day8/: CMakeLists.txt  readme.md
day8/src/: input.h  main.cpp
day9/: CMakeLists.txt  readme.md
day9/src/: input.h  main.cpp
util/: CMakeLists.txt
util/include/util/: benchmark.h  functional.h  map.h  numeric.h  position.h  util.h  verify.h
